--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"phpoffice/phpspreadsheet": "^1.25",
 		"mpdf/mpdf": "^8.1",
 		"google/apiclient": "^2.12",
-		"midtrans/midtrans-php": "^2.5"
+		"midtrans/midtrans-php": "^2.5",
+		"phpmailer/phpmailer": "^6.8"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
